fix: tags wrap

--- a/themes/sergiocarracedo/assets/scss/pages/post/_metadata.scss
+++ b/themes/sergiocarracedo/assets/scss/pages/post/_metadata.scss
@@ -6,6 +6,7 @@
 
   &__tags {
     display: flex;
+    flex-wrap: wrap;
   }
 
   &__tag {
